# etl-documentos

./: .env.example  Dockerfile  README.md  README_DEPLOY.md  config.py  debug_analytics.py  debug_env.py  debug_service.py  docker-compose.yml  fix_errors.py  get_superadmin_key.py  main.py  pyproject.toml  requirements.txt  run_docker.sh  run_full_test.sh  run_streamlit.py  setup_postgresql.py  start-services.sh  streamlit_app.py  test_classification_service.py  test_database_integration.py  test_docker_docling.py  test_docling_cpu.py  test_docling_imagens.py  test_docling_simples.py  test_document.txt  test_document_processor_init.py  test_nfs.txt  test_openai_key.py  test_providers.py  test_rastreabilidade.py  test_sistema_completo.py  test_streamlit.py  test_streamlit_complete.py  teste.py
.streamlit/: config.toml
api/: feedback_routes.py  routes.py
app/: __init__.py  main.py
attached_assets/: Pasted-Refatora-o-Completa-do-Projeto-ETL-Documentos-Objetivo-Refatore-completamente-o-projeto-ETL-1748997033063.txt
classification/: adaptive_classifier.py  classifier.py  faiss_classifier.py
config/: env.example  prompts.yaml
data/: etl_documentos_dev.db
extraction/: adaptive_extraction_base.py  alvara_municipal.py  cartao_cnpj.py  cei_obra.py  cnh.py  comprovante_bancario.py  contrato_social.py  extraction_base.py  fatura_telefonica.py  inscricao_municipal.py  nota_fiscal_eletronica_servico.py  termo_responsabilidade.py
models/: document.py
ocr/: document_processor.py
tests/: __init__.py  conftest.py  test_api.py  test_services.py
utils/: auth.py  mongo.py  (+5 more)
(+56 files in other folders)
